--- a/assets/styles/normalize.scss
+++ b/assets/styles/normalize.scss
@@ -4,7 +4,7 @@ html {
 	-webkit-text-size-adjust: 100%;
 }
 body {
-	font-family: Open Sans;
+	font-family: 'Open Sans', sans-serif;
 }
 *,
 *::before,
